--- a/TB.asciidoc
+++ b/TB.asciidoc
@@ -1,6 +1,6 @@
 |===
 |Theme Name |Performance |Accessibility |Best Practices |SEO | | | | | | |
-|https://github.com/panr/hugo-theme-terminal[Terminal]
+|Terminal
 |88
 |100
 |100
@@ -8,9 +8,9 @@
 |
 |
 |
-|0-49
-|50-89
-|90-100
+|
+|
+|
 |
 |Risotto
 |97
@@ -20,7 +20,7 @@
 |
 |
 |
-|October 2021 – current
+|
 |
 |
 |
@@ -32,7 +32,7 @@
 |
 |
 |
-|With uBlock Origin
+|
 |
 |
 |
@@ -44,7 +44,7 @@
 |
 |
 |
-|Vivaldi Browser
+|
 |
 |
 |
